src/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <label>Class</label>
    <nameField>
        <displayFormat>AT-{0000}-{YY}-{YYYY}</displayFormat>
        <label>Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>