src/objects/Class__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>TEXT( Course_Name__r.Business_Unit__c)</formula>
    <label>Product Area</label>
    <type>Text</type>
</CustomField>