src/objects/Class__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>