src/objects/Class__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <formula>Course_Name__r.Name</formula>
    <label>Course</label>
    <type>Text</type>
</CustomField>