src/objects/Class__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF((TEXT(End_Date__c-Start_Date__c)==&apos;1&apos; || TEXT(End_Date__c-Start_Date__c)==&apos;0&apos;), TEXT(End_Date__c-Start_Date__c) +&apos; &apos;+ &apos;day&apos;, TEXT(End_Date__c-Start_Date__c) +&apos; &apos;+ &apos;days&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>