src/objects/Class__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Field used in the course schedule VF page</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>