src/objects/Class__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>28</length>
    <type>Text</type>
</CustomField>