src/objects/Class__c/fields/Number_of_reservations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_reservations__c</fullName>
    <label>Number of reservations</label>
    <summaryFilterItems>
        <field>Reservation__c.Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed, Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Reservation__c.Class_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>