src/objects/Class__c/fields/Product_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Product_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product_IsActive</label>
    <type>Checkbox</type>
</CustomField>