src/objects/Class__c/fields/Product_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Product_Keywords__c</fullName>
    <label>Product Keywords</label>
    <type>TextArea</type>
</CustomField>