src/objects/Class__c/fields/Product_Make_this_Course_Public__c.field-meta.xml
<CustomField>
    <fullName>Product_Make_this_Course_Public__c</fullName>
    <formula>text( Course_Name__r.Make_this_course_public__c )</formula>
    <label>Product Make this Course Public</label>
    <type>Text</type>
</CustomField>