src/objects/Class__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Course_Name__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>