src/objects/Class__c/fields/Product_Per_Student_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Per_Student_Price__c</fullName>
    <formula>Course_Name__r.Per_student_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>USD</inlineHelpText>
    <label>Product per Student Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>