src/objects/Class__c/fields/Reserve_Class__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SR#450380</description>
    <label>Reserve Class</label>
    <type>Checkbox</type>
</CustomField>