src/objects/Class__c/fields/Seats_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Seats_Remaining__c</fullName>
    <formula>Total_Number_of_Seats__c - Number_of_reservations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>