src/objects/Class__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Field used in the course schedule VF page</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>