src/objects/Class__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7:00:00 AM</fullName>
            </value>
            <value>
                <fullName>7:30:00 AM</fullName>
            </value>
            <value>
                <fullName>8:00:00 AM</fullName>
                <default>true</default>
                <label>8:00:00 AM</label>
            </value>
            <value>
                <fullName>8:30:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00:00 AM</fullName>
            </value>
            <value>
                <fullName>9:30:00 AM</fullName>
            </value>
            <value>
                <fullName>10:00:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30:00 AM</fullName>
            </value>
            <value>
                <fullName>12:00:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00:00 PM</fullName>
            </value>
            <value>
                <fullName>1:30:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00:00 PM</fullName>
            </value>
            <value>
                <fullName>2:30:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00:00 PM</fullName>
            </value>
            <value>
                <fullName>3:30:00 PM</fullName>
            </value>
            <value>
                <fullName>4:00:00 PM</fullName>
            </value>
            <value>
                <fullName>4:30:00 PM</fullName>
            </value>
            <value>
                <fullName>5:00:00 PM</fullName>
            </value>
            <value>
                <fullName>5:30:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00:00 PM</fullName>
            </value>
            <value>
                <fullName>6:30:00 PM</fullName>
            </value>
            <value>
                <fullName>7:00:00 PM</fullName>
            </value>
            <value>
                <fullName>7:30:00 PM</fullName>
            </value>
            <value>
                <fullName>8:00:00 PM</fullName>
            </value>
            <value>
                <fullName>8:30:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00:00 PM</fullName>
            </value>
            <value>
                <fullName>9:30:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>