src/objects/Class__c/validationRules/Confirm_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Confirm_User</fullName>
    <active>true</active>
    <errorConditionFormula>(  ISCHANGED(End_Date__c ) ||   ISCHANGED( Start_Date__c ) ||  ISCHANGED(End_Time__c ) ||   ISCHANGED( Start_Time__c )) &amp;&amp;  Are_you_sure__c ==False</errorConditionFormula>
    <errorDisplayField>Are_you_sure__c</errorDisplayField>
    <errorMessage>Are you sure to change the class schedule?There are reservations for this class.</errorMessage>
</ValidationRule>