src/objects/Class__c/validationRules/Location_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>Location__c ==null</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>Please enter Location</errorMessage>
</ValidationRule>