src/objects/Class__c/validationRules/StartDate_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_EndDate</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>End Date should be after Start Date of the class</errorMessage>
</ValidationRule>