src/objects/Class__c/listViews/Classes_This_Year_All.listView-meta.xml
<ListView>
    <fullName>Classes_This_Year_All</fullName>
    <columns>Course_Name__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Seats_Remaining__c</columns>
    <columns>Total_Number_of_Seats__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Name__c</field>
        <operation>contains</operation>
        <value>jetwave</value>
    </filters>
    <label>HTS900</label>
    <sharedTo>
        <group>HwTrng_Admins</group>
    </sharedTo>
</ListView>