src/objects/Class__c/listViews/Next_Week_s_Classes.listView-meta.xml
<ListView>
    <fullName>Next_Week_s_Classes</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Total_Number_of_Seats__c</columns>
    <columns>Seats_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Name__c</field>
        <operation>contains</operation>
        <value>TPE331-12B</value>
    </filters>
    <label>TPE331-12B</label>
    <sharedTo>
        <group>HwTrng_Admins</group>
    </sharedTo>
</ListView>